2009-06-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSUndoManager.m (-undo, -redo): Call -_begin instead of
	-beginUndoGrouping to avoid creation of a spurious top-level group
	while performing undo or redo operations, which was causing the
	recorded actions to be dropped silently.

	* Source/NSUndoManager.m (-beginUndoGrouping): Post
	NSUndoManagerCheckpointNotification also during undo as on OS X.

	* Source/NSUndoManager.m (-endUndoGrouping): Post
	NSUndoManagerWillCloseUndoGroupNotification before changing the
	group so that clients see the same grouping level as on OS X.

2009-05-29 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSObject.m: Atomic increment and decrement functions for m68k
	
2009-05-29 Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile: Use $(warning ...) instead of $(info ...) since
	$(info ...) exists only in GNU make >= 3.81.
	* NSCharacterSets/GNUmakefile: Same change.
	* Source/GNUmakefile: Same change.
	* SSL/GNUmakefile: Same change.
	* Documentation/GNUmakefile: Same change.
	* Resources/GNUmakefile: Same change.
	* NSTimeZones/GNUmakefile: Same change.
	* Examples/GNUmakefile: Same change.
	* Tools/GNUmakefile: Same change.

2009-05-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: Updates to match latest MacOS-X behavior.
	The +new and -init methods now return nil.
	Timers are now treated like input sources for purposes of deciding
	whether the loop will block and whether performerds will execute.
	* Source/NSTimer.m: Updates to match latest MacOS-X behavior.
	The +new and -init methods now return nil.

2009-05-24 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Use lock to prevent race condition setting up
	runloop info for thread.

2009-05-23 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyValueObserving.m:
	Permit setters which return values.

2009-05-22 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m:
	* Source/NSBundle.m: