@@ -51,8 +51,11 @@ static unichar Next_char_to_uni_table[] =
   0x0192,
   0x00A7,
   0x00A4,
+  0xFBA9,
   0x201C,
   0x00AB,
+  0xFBAC,
+  0xFBAD,
   0xFB01,
   0xFB02,
   0x00AE,
@@ -63,6 +66,8 @@ static unichar Next_char_to_uni_table[] =
   0x00A6,
   0x00B6,
   0x2022,
+  0xFBB8,
+  0xFBB9,
   0x201D,
   0x00BB,
   0x2026,
