@@ -1,3 +1,7 @@
+2009-06-04 Georg Fleischmann <G.Fleischmann@vhf.de>
+
+	* Source/Additions/unicode/nextstep.h: Fixups for encoding mapping.
+
 2009-06-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Source/NSUndoManager.m (-undo, -redo): Call -_begin instead of
